# webuntis2discord

./: CMakeLists.txt  README.md
CM_Config/: 00-PrepareFunctions.cmake  01-CrossToolchain.cmake  02-BuildingPaths.cmake  LibraryHandler.cmake  Vcpkg.cmake
Include/Webuntis/: Structs.hpp
Include/dev_tools/commons/: AndroidEnv.hpp  HelpPage.hpp  I18n.hpp  MIMEInfo.hpp  Terminal.hpp  Tools.hpp  Utils.hpp
Include/dev_tools/logging/: Logger.hpp
Include/dev_tools/network/: Errors.hpp  Network.hpp  URLParams.hpp
Include/dev_tools/network/Proxy/: Proxy.hpp  ProxyChains.hpp
References/: .gitignore  HolidayData.json  NoSchoolWeekData.json  SchoolWeekAbsenseInclusion.json  SchoolWeekData.json
Sources/App/: Main.cpp  SourceInfo.cmake
Sources/DevTools/: SourceInfo.cmake
Sources/DevTools/Commons/: AndroidEnv.cpp  HelpPage.cpp  Terminal.cpp  Tools.cpp  Utils.cpp
Sources/DevTools/executables/: runlib.cpp
Sources/DevTools/net/: Errors.cpp  Networking.cpp  URLParams.cpp
Sources/DevTools/net/Proxy/: Proxy.cpp
Toolchains/: Linux_MinGW_Win64.cmake  Linux_amd64.cmake  Linux_arm64.cmake
